# symon

./: Cargo.toml  README.md  install.sh  monitor_config.json  symon_cli.pl  system_monitor.pl  system_monitor_modular.pl  system_monitor_modular_new.pl
lib/: ASCIIDisplay.pm  ProfileManager.pm  SmartCPU.pm  SmartMemory.pm
lib/Symon/: Config.pm  Display.pm  SmartCPU.pm  SmartMemory.pm
lib/SystemMonitor/: Config.pm  Display.pm  Logger.pm
src/: lib.rs  main.rs
