[package]
name = "symon_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
procfs = "0.16"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "symon_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "symon"
path = "src/main.rs"
